--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <maven.compiler.target>17</maven.compiler.target>
 
         <spring.boot.version>2.7.1</spring.boot.version>
+        <de.flapdoodle.embed.mongo.version>3.4.6</de.flapdoodle.embed.mongo.version>
+        <version.embedmongo.plugin>0.4.1</version.embedmongo.plugin>
     </properties>
 
     <dependencies>
@@ -21,6 +23,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring.boot.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <version>${de.flapdoodle.embed.mongo.version}</version>
         </dependency>
 
         <dependency>
